# neo-framework

./: 00_author_agents_test.csv  LICENSE  README.md  gulpfile.js  package.json  pyproject.toml  pyrightconfig.json  todo.md  tox.ini
neof_backend_root/: manage.py
neof_backend_root/accounts/: api.py  models.py  serializers.py  urls.py  utils.py  views.py
neof_backend_root/neof_backend/: asgi.py  db.sqlite3  urls.py  wsgi.py
neof_backend_root/neof_backend/settings/: base_settings.py  development.py  production.py
neof_backend_root/src/js/api/: rest-api-consumation.js
neof_backend_root/src/js/components/: authentication-components.js  button-components.js  card-components.js  fb-components.js  form-components.js  modal-components.js  post-components.js  table-components.js
neof_backend_root/src/js/pages/: auth-page.js  newsfeed-page.js  resource-manage-page.js
neof_backend_root/src/js/utils/: authentication-utils.js  dictionary-utils.js  string-utils.js
neof_backend_root/static/css/: styles.css
neof_backend_root/static/js/pages/: auth-page.js  newsfeed-page.js  resource-manage-page.js
neof_backend_root/templates/: base.html
neof_backend_root/templates/components/: navbar.html
neof_backend_root/templates/pages/: about.html  home.html  react-newsfeed-page.html  react-page.html
neof_backend_root/utils_newsfeed/: admin.py  api.py  apps.py  csv_upload.py  csv_upload_utils.py  forms.py  models.py  serializer.py  urls.py  utils.py  views.py  views_utils.py
neof_backend_root/utils_newsfeed/management/commands/: load_csv.py
(+9 files in other folders)
